# yakh

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements-dev.txt
.github/workflows/: python-lint.yml  python-publish.yml  python-test.yml
tests/: keypress_test.py
yakh/: __init__.py  _yakh.py  key.py
yakh/key/: __init__.py  _key.py
