[tool.poetry]
name = "python-yakh"
version = "0.3.2"
description = "Yet Another Keypress Handler"
authors = ["petereon <pvyboch1@gmail.com>"]
license = 'MIT'
repository = 'https://github.com/petereon/yakh'
readme = "README.md"
keywords = ["python", "keypress", "key", "keyboard"]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]

packages = [
    { include = "yakh" },
]

[tool.poetry.dependencies]
python = "^3.7.8"


[tool.poetry.group.dev.dependencies]
ward = "^0.67.0b0"
ward-coverage = "^0.3.0"
black = "^22.10.0"
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lint = { shell = "black ./yakh/ && pylint ./yakh/"}
test = { shell = "ward -p ./tests"}